--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -79,7 +79,7 @@ header a {
 .plats {
     display: flex;
     justify-content: space-between;
-    align-items: last baseline;
+    align-items: center;
     background-color:white;
     margin-bottom: 14px;
     padding: 0 23px 0 10px;
@@ -105,6 +105,7 @@ header a {
         color: $gris-fonce;
         font-size: 15px;
         font-weight: 600;
+        padding-top: 25px;
     }
     &-liste {
         @include min-tablette {
